k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openalert
  labels:
    name: openalert
    app: openalert
